Integrate JAXB-Impl 3.0.0-M2
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>